--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 11</title>
+    <title>Homework 12</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
@@ -26,11 +25,14 @@
         />
         <button type="submit" class="search-button">Search</button>
       </form>
-      <span class="loader visually-hidden"></span>
     </section>
     <section>
       <ul class="gallery"></ul>
+      <button type="button" class="load-more-button visually-hidden">
+        Load More
+      </button>
+      <span class="loader visually-hidden"></span>
     </section>
-    <script src="./main.js" type="module"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
